--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.9.2",
-    "react-dom": "^18.2.0"
+    "react-bootstrap": "^2.9.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
